[package]
name = "mcuboot-meta"
version = "0.1.1"
edition = "2024"

description = "A library to read and parse MCUboot images written in rust 🦀"
repository = "https://github.com/igiona/mcuboot-meta"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.11.0"
log = "0.4.29"
thiserror = "2.0.18"
